...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <ScrollView
                android:id="@+id/sv_add_pet"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
...
                        app:placeholderText="@string/label_name"
                        app:endIconDrawable="@drawable/ic_close"
                        app:endIconMode="clear_text"
                        app:layout_constraintTop_toBottomOf="@id/tv_label_name_add_pet">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name_add_pet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:background="@drawable/bg_field_app"
                            android:textColor="?attr/colorPrimary" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/space_20dp"
                        app:cursorColor="@color/black"
                        app:placeholderText="@string/label_breed"
                        app:layout_constraintTop_toBottomOf="@id/tv_label_breed_add_pet">
                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/atctv_bredd_add_pet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_field_app"
                            android:padding="@dimen/space_10dp"
                            android:inputType="textCapWords"
                            android:textCursorDrawable="?attr/colorPrimary"
...
